@@ -1,65 +1,0 @@
-// Soda - Apple @ DmmD GM
-
-// Defines fonts
-.soda-font {
-	@for $size from 1 through 20 {
-		&-#{$size * 5} {
-			font-size: #{$size * 5}px;
-			@if $size > 3 {
-				font-weight: bold;
-			}
-			line-height: #{$size * 5 + 5}px;
-		}
-	}
-}
-
-// Defines hover effects
-.soda-hover {
-	@mixin soda-hover-line {
-		background-color: rgb(var(--soda-rgb-black));
-		content: "";
-		height: 3px;
-		left: 0%;
-		position: absolute;
-		transform: scaleX(0);
-		transition: transform 0.2s ease;
-		width: 100%;
-	}
-
-	&-background {
-		cursor: pointer;
-		transition: background 0.2s ease;
-
-		&:focus-visible, &:hover {
-			background-color: rgba(var(--soda-rgb-black), 0.5);
-		}
-	}
-
-	&-overline {
-		cursor: pointer;
-		position: relative;
-
-		&:focus-visible::before, &:hover::before {
-			transform: scaleX(0.25);
-		}
-
-		&::before {
-			@include soda-hover-line;
-			top: -5px;
-		}
-	}
-
-	&-underline {
-		cursor: pointer;
-		position: relative;
-
-		&:focus-visible::after, &:hover::after {
-			transform: scaleX(0.25);
-		}
-
-		&::after {
-			@include soda-hover-line;
-			bottom: -5px;
-		}
-	}
-}
