@@ -10,7 +10,7 @@
 	margin: 0px;
 	outline: none;
 	padding: 0px;
-	scrollbar-color: rgb(var(--soda-rgb-black)) rgb(var(--soda-rgb-white));
+	scrollbar-color: rgb(var(--soda-rgb-white)) rgb(var(--soda-rgb-black));
 	scrollbar-gutter: stable both-edges;
 	scrollbar-width: thin;
 	text-decoration: none;
@@ -25,4 +25,16 @@ body {
 	background-color: rgb(var(--soda-rgb-white));
 	height: 100%;
 	width: 100%;
+}
+
+// Defines defaults (dark)
+html[data-soda-theme-dark] {
+	* {
+		color: rgb(var(--soda-rgb-white));
+		scrollbar-color: rgb(var(--soda-rgb-black)) rgb(var(--soda-rgb-white));
+	}
+	
+	body {
+		background-color: rgb(var(--soda-rgb-black));
+	}
 }
